<resources>
    <string name="app_name">player_finder</string>
    <string name="language_toggle">hebrew</string>
    <string name="language_toggle_clicked">language changed to english</string>
    <string name="profile">profile</string>
    <string name="friends">friends</string>
    <string name="my_games">my games</string>
    <string name="profile_fragment">profile fragment</string>
    <string name="friends_fragment">friends fragment</string>
    <string name="my_games_fragment">my games fragment</string>

    <string name="logout_button_text">Logout</string>
    <string name="go_to_login">Back to login</string>
    <string name="go_to_register">Not registered yet? click here to sign up</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="username">Username</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_email">Enter Email</string>
    <string name="click_to_login">Click to login</string>
    <string name="click_to_register">Click to register</string>
    <string name="menu">Menu</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="title_activity_base">BaseActivity</string>

    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <string name="search_game">Search game</string>
    <string name="search">Search</string>
    <string name="add_game">Add game</string>
    <string name="add">Add</string>
    <string name="friend_name">friend_name</string>
    <string name="friend_email">friend_email</string>
    <string name="game_title">game_title</string>
    <string name="search_games">Search games</string>
    <string name="search_friends">Search friends</string>
    <string name="my_friends">my friends</string>
    <string name="chat">Chat</string>
    <string name="update_password">Update Password</string>
    <string name="new_password">New password</string>
    <string name="update_email">Update Email</string>
    <string name="start_new_chat">start new chat</string>
    <string name="last_message">Last message</string>
    <string name="participants">participants</string>
    <string name="all_friends">All friends</string>">


</resources>